--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "inquiry": "^0.0.3"
   }
 }
