--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app for saving, viewing, and deleting notes.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Drew Jefferson",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "inquirer": "^7.3.3",
-    "inquiry": "^0.0.3"
+    "inquirer": "^7.3.3"
   }
 }
